clean up alignment issues on custom activity pack page

--- a/app/assets/stylesheets/shared/activity_tables/selected-activities/selected-activities.scss
+++ b/app/assets/stylesheets/shared/activity_tables/selected-activities/selected-activities.scss
@@ -7,5 +7,8 @@
   .selected-activities {
     display: table;
     border-bottom: none;
+    .deselect-activity {
+      padding-right: 40px;
+    }
   }
 }
